--- a/TraceIt/Views/SubjectsPage.xaml
+++ b/TraceIt/Views/SubjectsPage.xaml
@@ -56,11 +56,11 @@
                                            AbsoluteLayout.LayoutBounds="0.5, 0.1, 0.9, 0.2"
                                            FontAttributes="Bold"/>
 
-                                    <Label Text="{Binding Credits, StringFormat='0 / {0} credits'}"
+                                    <Label Text="0 / 0 credits"
                                            AbsoluteLayout.LayoutFlags="All"
                                            AbsoluteLayout.LayoutBounds="0.5, 0.35, 0.9, 0.2"/>
 
-                                    <Label Text="{Binding Standards, StringFormat='{0} standards'}"
+                                    <Label Text="0 standards"
                                            AbsoluteLayout.LayoutFlags="All"
                                            AbsoluteLayout.LayoutBounds="0.5, 0.53, 0.9, 0.2"/>
 
