Removed SfGradientView and replaced with styles that include gradient for layouts.

--- a/TraceIt/Views/Charts/MainChartsPage.xaml
+++ b/TraceIt/Views/Charts/MainChartsPage.xaml
@@ -39,14 +39,12 @@
 
     <ContentPage.Content>
 
-        <AbsoluteLayout>
-            <graphics:SfGradientView Style="{DynamicResource backgroundGradient}"
-                                     AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"/>
+        <AbsoluteLayout Style="{DynamicResource gradientAbsoluteLayout}">
 
             <StackLayout AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1">
 
-                <Frame BackgroundColor="#002147" CornerRadius="30" Padding="10, 5"
-                       Margin="5">
+                <Frame BackgroundColor="#002147" CornerRadius="30" Padding="10, 5" Margin="5">
+                    
                     <buttons:SfSegmentedControl x:Name="tabSelector" SelectionChanged="tabSelector_SelectionChanged" 
                                             SegmentPadding="5" SegmentHeight="35" FontSize="15">
 
