--- a/TraceIt/Views/GradeSelectionPage.xaml
+++ b/TraceIt/Views/GradeSelectionPage.xaml
@@ -22,8 +22,7 @@
     </ContentPage.Resources>
     
     <ContentPage.Content>
-        <AbsoluteLayout>
-            <gradient:SfGradientView Style="{DynamicResource backgroundGradient}"/>
+        <AbsoluteLayout Style="{DynamicResource gradientAbsoluteLayout}">
 
             <StackLayout Margin="5"
                          AbsoluteLayout.LayoutFlags="All"
