--- a/TraceIt/Views/SelectedStandardsPage.xaml
+++ b/TraceIt/Views/SelectedStandardsPage.xaml
@@ -36,7 +36,7 @@
                     </CollectionView.ItemsLayout>
                     <CollectionView.ItemTemplate>
                         <DataTemplate>
-                            <border:SfBorder Style="{DynamicResource listItemBorder}">
+                            <Frame Style="{DynamicResource listItemFrame}" Padding="0">
                                 <AbsoluteLayout HeightRequest="135">
 
                                     <Label Text="{Binding Subject_Reference}"
@@ -66,7 +66,7 @@
                                                      Style="{DynamicResource subjectButtonGradient}"/>
 
                                 </AbsoluteLayout>
-                            </border:SfBorder>
+                            </Frame>
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
 
