--- a/TraceIt/App.xaml
+++ b/TraceIt/App.xaml
@@ -55,30 +55,17 @@
                     </Setter.Value>
                 </Setter>
             </Style>
-            
-            <Style TargetType="border:SfBorder" x:Name="listItemBorder">
+
+            <Style TargetType="Frame" x:Key="listItemFrame">
                 <Setter Property="CornerRadius" Value="28"/>
                 <Setter Property="Background">
                     <Setter.Value>
-                        <LinearGradientBrush>
+                        <LinearGradientBrush StartPoint="0.5, 0" EndPoint="0.5, 1">
                             <LinearGradientBrush.GradientStops>
                                 <GradientStop Color="#150B47" Offset="0.1"/>
                                 <GradientStop Color="#04020E" Offset="1"/>
                             </LinearGradientBrush.GradientStops>
                         </LinearGradientBrush>
-                    </Setter.Value>
-                </Setter>
-            </Style>
-
-            <Style TargetType="gradient:SfGradientView" x:Key="backgroundGradient">
-                <Setter Property="BackgroundBrush">
-                    <Setter.Value>
-                        <gradient:SfLinearGradientBrush>
-                            <gradient:SfLinearGradientBrush.GradientStops>
-                                <gradient:SfGradientStop Color="#4B7BFF" Offset="0"/>
-                                <gradient:SfGradientStop Color="#071D57" Offset="1.0"/>
-                            </gradient:SfLinearGradientBrush.GradientStops>
-                        </gradient:SfLinearGradientBrush>
                     </Setter.Value>
                 </Setter>
             </Style>
