--- a/TraceIt/Views/ShellHomePage.xaml
+++ b/TraceIt/Views/ShellHomePage.xaml
@@ -8,11 +8,12 @@
              xmlns:controls="clr-namespace:TraceIt.Controls"
              mc:Ignorable="d"
              x:Class="TraceIt.Views.ShellHomePage"
-             BackgroundColor="DarkBlue">
+             TitleColor="White"
+             >
 
     <Shell.Resources>
         <ResourceDictionary>
-            <Style x:Key="primaryStyle" TargetType="Element">
+            <Style TargetType="Element">
                 <Setter Property="Shell.TabBarTitleColor" Value="White"/>
                 <Setter Property="Shell.TitleColor" Value="White"/>
                 <Setter Property="Shell.ForegroundColor" Value="White"/>
@@ -24,7 +25,7 @@
         </ResourceDictionary>
     </Shell.Resources>
 
-    <TabBar Style="{StaticResource primaryStyle}">
+    <TabBar>
         <Tab Title="Subjects">
             <ShellContent ContentTemplate="{DataTemplate pages:SubjectsPage}"/>
         </Tab>
